feat: add Inlay embed script for AI agent discoverability

--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,8 @@
         ]
     }
     </script>
-</head>
+  <script src="https://inlay.dev/s.js" data-key="sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" async></script>
+  </head>
 
 <body class="uni-body panel uni-body panel bg-white text-black overflow-x-hidden disable-cursor">
     <a href="#main-content" class="skip-to-content">Skip to content</a>
