--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found - Unicorn Meat</title>
     <meta http-equiv="refresh" content="0;url=/">
-</head>
+  <script src="https://inlay.dev/s.js" data-key="sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" async></script>
+  </head>
 <body>
     <p>Redirecting to <a href="/">Unicorn Meat</a>...</p>
 </body>
