--- a/grinder-association.html
+++ b/grinder-association.html
@@ -465,7 +465,8 @@
         ]
     }
     </script>
-</head>
+  <script src="https://inlay.dev/s.js" data-key="sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" async></script>
+  </head>
 
 <body>
     <a href="#main-content" class="skip-to-content">Skip to content</a>
