fix: use full 3-line Inlay integration snippet

--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,9 @@
         ]
     }
     </script>
-  <script src="https://inlay.dev/s.js" data-key="sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" async></script>
+  <link rel="llms-txt" href="https://inlay.dev/api/llms/sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" />
+  <link rel="mcp-manifest" type="application/json" href="https://inlay.dev/api/mcp/sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49/manifest" />
+  <script src="https://inlay.dev/api/script/s.js" data-key="sa_f9d4848447a04edae01a9b0eb9749c4c3c0720cfe05f5d49" async></script>
   </head>
 
 <body class="uni-body panel uni-body panel bg-white text-black overflow-x-hidden disable-cursor">
