Add How to Buy page, fix twitter meta tags, add buy FAQ schema
- New /how-to-buy page with step-by-step guide, HowTo schema, SEO
- Added twitter:site and twitter:creator meta tags (@UnicornMeatETH)
- Added 'Where can I buy?' FAQ schema entry
- Cross-promotion with MistCoin (sister token section)
- Updated nav (mobile, desktop, footer) and sitemap

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <meta property="og:image:type" content="image/png">
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@UnicornMeatETH">
+    <meta name="twitter:creator" content="@UnicornMeatETH">
     <meta name="twitter:title" content="Unicorn Meat 🍖">
     <meta name="twitter:description" content="A magical coin made by Ethereum in March 2016. Now wrapped and revived.">
     <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
@@ -1890,6 +1892,14 @@
                     "@type": "Answer",
                     "text": "Yes! Wrapped Unicorn Meat (w🍖) is fully interoperable with the original 2016 Unicorn Meat contract. You can freely wrap and unwrap tokens 1:1 at any time. To wrap, use the approveAndCall function on the original Unicorn Meat token contract on Etherscan, or use the Wrap button on this website. To unwrap, use the unwrap function on the Wrapped Unicorn Meat contract."
                 }
+            },
+            {
+                "@type": "Question",
+                "name": "Where can I buy Unicorn Meat?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Wrapped Unicorn Meat (w🍖) is tradable on Ethereum and Base via decentralized exchanges. You can buy on Uniswap (Ethereum: 0xDFA208BB0B811cFBB5Fa3Ea98Ec37Aa86180e668, Base: 0xa0ff877E3d4f3a108B1B3d5eB3e4369301D2b2D7) or CoW Swap. Connect your wallet, swap ETH for w🍖, and you own a piece of Ethereum history."
+                }
             }
         ]
     }
@@ -1954,6 +1964,7 @@
                 <ul class="nav-y gap-narrow fw-medium fs-6" data-uc-nav>
                     <li><a href="#about">About</a></li>
                     <li><a href="#trading">Buy 🍖</a></li>
+                    <li><a href="/how-to-buy">How to Buy</a></li>
                     <li><a href="#wrap">Wrap 🦄🍖</a></li>
                     <li><a href="#join-herd">🦄 Herd</a></li>
                     <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
@@ -2048,6 +2059,7 @@
                                 data-uc-scrollspy-nav="closet: > *; offset: 48; scroll: true;">
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#trading">Buy 🍖</a></li>
+                                <li><a href="/how-to-buy">How to Buy</a></li>
                                 <li><a href="#wrap">Wrap 🦄🍖</a></li>
                                 <li><a href="#join-herd">🦄 Herd</a></li>
                                 <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
@@ -3624,6 +3636,7 @@
                     <ul class="nav-x gap-0 row child-cols-auto justify-center gx-4 gy-2 lg:g-4">
                         <li><a href="#about">About</a></li>
                         <li><a href="#trading">Buy 🍖</a></li>
+                        <li><a href="/how-to-buy">How to Buy</a></li>
                         <li><a href="#wrap">Wrap 🦄🍖</a></li>
                         <li><a href="#join-herd">🦄 Herd</a></li>
                         <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
