seo: add llms.txt to robots.txt and sitemap, update lastmod dates

--- a/index.html
+++ b/index.html
@@ -1847,6 +1847,46 @@
         "mainEntity": [
             {
                 "@type": "Question",
+                "name": "What is Unicorn Meat?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Unicorn Meat (🍖) is a historic Ethereum token created in March 2016 by Alex Van de Sande, who served as head of UX at the Ethereum Foundation. It was one of the earliest tokens on Ethereum, predating the ERC-20 standard. The original contract has been wrapped as w🍖 and is now tradable on decentralized exchanges."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How do I buy Unicorn Meat?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "You can buy Wrapped Unicorn Meat (w🍖) on Uniswap or CoW Swap on both Ethereum and Base networks. Simply connect your wallet, swap ETH for w🍖, and you own a piece of Ethereum history. You can also wrap original Unicorn Meat tokens 1:1 into w🍖 using the wrap function on this website."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What is the Grinder Association?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "The Unicorn Meat Grinder Association is the DAO that governs Unicorn Meat. Created by Alex Van de Sande in 2016, it uses quadratic voting — one of the earliest implementations of this governance mechanism on Ethereum. Any Unicorn token holder can participate in governance proposals through the Association."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Who created Unicorn Meat?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Unicorn Meat was created by Alex Van de Sande (avsa.eth), who was the head of UX at the Ethereum Foundation. He deployed the Unicorn token, the Unicorn Meat Grinder (which converts Unicorns into Meat), and the Grinder Association DAO — all in March 2016, making these some of the earliest smart contracts on Ethereum."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What makes Unicorn Meat historically significant?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Unicorn Meat holds multiple firsts in Ethereum history: it was used in one of the first on-chain DEX demonstrations, pioneered the first token upgrade pattern (grinding Unicorns into Meat), and predates the ERC-20 standard. It is one of the few tradable tokens directly created by an Ethereum Foundation team member, making it a unique piece of crypto history."
+                }
+            },
+            {
+                "@type": "Question",
                 "name": "Is this the real historical Unicorn Meat?",
                 "acceptedAnswer": {
                     "@type": "Answer",
@@ -3340,7 +3380,42 @@
                         <div class="section-content panel">
                             <ul class="gap-3 sm:gap-4" data-uc-accordion="targets: > li; multiple: true">
                                 <li
-                                    class="panel p-3 sm: p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white rotate-1 uc-open">
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white rotate-1 uc-open">
+                                    <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">What is Unicorn Meat?</a>
+                                    <div class="uc-accordion-content">
+                                        <p class="fs-5 xl:fs-4">Unicorn Meat (🍖) is a historic Ethereum token created in March 2016 by Alex Van de Sande, who served as head of UX at the Ethereum Foundation. It was one of the earliest tokens on Ethereum, predating the ERC-20 standard. The original contract has been wrapped as w🍖 and is now tradable on decentralized exchanges.</p>
+                                    </div>
+                                </li>
+                                <li
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white -rotate-1">
+                                    <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">How do I buy Unicorn Meat?</a>
+                                    <div class="uc-accordion-content">
+                                        <p class="fs-5 xl:fs-4">You can buy Wrapped Unicorn Meat (w🍖) on <a href="https://app.uniswap.org" target="_blank" rel="noopener noreferrer">Uniswap</a> or <a href="https://swap.cow.fi" target="_blank" rel="noopener noreferrer">CoW Swap</a> on both Ethereum and Base networks. Simply connect your wallet, swap ETH for w🍖, and you own a piece of Ethereum history. You can also wrap original Unicorn Meat tokens 1:1 into w🍖 using the wrap function on this website.</p>
+                                    </div>
+                                </li>
+                                <li
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white rotate-1">
+                                    <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">What is the Grinder Association?</a>
+                                    <div class="uc-accordion-content">
+                                        <p class="fs-5 xl:fs-4">The Unicorn Meat Grinder Association is the DAO that governs Unicorn Meat. Created by Alex Van de Sande in 2016, it uses quadratic voting — one of the earliest implementations of this governance mechanism on Ethereum. Any Unicorn token holder can participate in governance proposals through the Association.</p>
+                                    </div>
+                                </li>
+                                <li
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white -rotate-1">
+                                    <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">Who created Unicorn Meat?</a>
+                                    <div class="uc-accordion-content">
+                                        <p class="fs-5 xl:fs-4">Unicorn Meat was created by Alex Van de Sande (avsa.eth), who was the head of UX at the Ethereum Foundation. He deployed the Unicorn token, the Unicorn Meat Grinder (which converts Unicorns into Meat), and the Grinder Association DAO — all in March 2016, making these some of the earliest smart contracts on Ethereum.</p>
+                                    </div>
+                                </li>
+                                <li
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white rotate-1">
+                                    <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">What makes Unicorn Meat historically significant?</a>
+                                    <div class="uc-accordion-content">
+                                        <p class="fs-5 xl:fs-4">Unicorn Meat holds multiple firsts in Ethereum history: it was used in one of the first on-chain DEX demonstrations, pioneered the first token upgrade pattern (grinding Unicorns into Meat), and predates the ERC-20 standard. It is one of the few tradable tokens directly created by an Ethereum Foundation team member, making it a unique piece of crypto history.</p>
+                                    </div>
+                                </li>
+                                <li
+                                    class="panel p-3 sm:p-4 xl:p-6 border border-2 border-black contrast-shadow-sm text-black bg-white -rotate-1">
                                     <a class="uc-accordion-title h5 xl:h4 stroke-text m-0" href="#">Is this the real
                                         historical Unicorn Meat?</a>
                                     <div class="uc-accordion-content">
