chore(site): revert homepage links and restyle UnicornMarket mock with 🦄/w🍖

--- a/index.html
+++ b/index.html
@@ -1957,7 +1957,7 @@
         <div class="container" style="position: relative;">
             <div class="text-center w-100" style="padding-right: 2.5rem;">
                 <p class="mb-0 fw-bold fs-7 sm:fs-6 lg:fs-5" style="color: #000;">
-                    📒 <strong>UnicornMarket is live for preview:</strong> explore the onchain orderbook UX for <strong>Unicorn ⇄ wMEAT</strong>. <a href="/market" style="color: #000; text-decoration: underline; font-weight: bold;">Open UnicornMarket</a>
+                    🎂 February 11, 2026 marks the <strong>10th anniversary</strong> of the historic Unicorns 🦄 contract, created by the Ethereum Foundation. <a href="#about" style="color: #000; text-decoration: underline; font-weight: bold;">Read the Story</a>
                 </p>
             </div>
             <button id="close-announcement" class="btn btn-sm border border-2 border-black contrast-shadow-sm fs-7 sm:fs-6" style="position: absolute; top: 50%; right: 0; transform: translateY(-50%); background: white; color: #000; min-width: auto; padding: 0.25rem 0.5rem; flex-shrink: 0;" aria-label="Close announcement">
@@ -2007,7 +2007,6 @@
                     <li><a href="/how-to-buy">How to Buy</a></li>
                     <li><a href="#wrap">Wrap 🦄🍖</a></li>
                     <li><a href="#join-herd">🦄 Herd</a></li>
-                    <li><a href="/market">📒 UnicornMarket</a></li>
                     <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
                     <li><a href="#references">Links</a></li>
                 </ul>
@@ -2103,8 +2102,7 @@
                                 <li><a href="/how-to-buy">How to Buy</a></li>
                                 <li><a href="#wrap">Wrap 🦄🍖</a></li>
                                 <li><a href="#join-herd">🦄 Herd</a></li>
-                                <li><a href="/market">📒 UnicornMarket</a></li>
-                    <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
+                                <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
                             </ul>
                         </div>
                         <div class="uc-navbar-right">
@@ -3748,8 +3746,7 @@
                         <li><a href="/how-to-buy">How to Buy</a></li>
                         <li><a href="#wrap">Wrap 🦄🍖</a></li>
                         <li><a href="#join-herd">🦄 Herd</a></li>
-                        <li><a href="/market">📒 UnicornMarket</a></li>
-                    <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
+                        <li><a href="/grinder-association">🦄🍖 Grinder</a></li>
                     </ul>
                 </div>
             </div>
